# kandelo

./: .gitignore  .gitmodules  3bdejohlloiqibjledgejgkq8ch8tep1  9df0mekggtckih1okqvoupfjljm4kgtj.darc  CLAUDE.local.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  MANIFEST  README.md  build.sh  flake.nix  gh9kdnateqjpmgjkdnhk69ugpeukljj2.darc  gq8hqs18nqhmimncvlsgjfflksjsrh8f  gqsvtfghdbmgeukn19jgnsiarbvmkqvr  h8hmmkjepdofrisk5m7csppmdu5sjouk.darc  index.html  josdtgbkhpiugajviifcumvttdk8kbhd.darc  manifest  masfha6dqobrvhdj1ekqqcgejrschmci  nginx.vfs.zst  node-vfs.vfs.zst  package-lock.json  package.json  run.sh  rust-toolchain.toml  rut6nltpopvrjffnqqthc8dushd79shu  service-worker.js  shell.vfs.zst  unqasvbbsav3j1brocougmvkp2em4gho  v2jui24hepv5gfigqkukmeqdellhsbbc  vim-runtime-bundle.json
.cargo/: config.toml
.github/: dependabot.yml
.superset/: config.json
abi/: manifest.json  manifest.schema.json  program-metadata.toml  snapshot.json
api/: hierarchy.html
apps/: README.md
assets/: __vite-browser-external-0rkbrCr9.js  __vite-browser-external-82kOHDG7.js  __vite-browser-external-B10XlTMB.js  __vite-browser-external-B5OPtbz7.js  __vite-browser-external-BI6eo_ii.js  __vite-browser-external-BO4JkiG-.js  __vite-browser-external-BQmvazNg.js  __vite-browser-external-BS6qb8JG.js  __vite-browser-external-Bk0SxIJX.js  __vite-browser-external-BmQrKmti.js  __vite-browser-external-Bwl0uoTV.js  __vite-browser-external-Bxwc3Sx4.js  __vite-browser-external-By8Z4QHN.js  __vite-browser-external-C8O6jeoo.js  __vite-browser-external-CBxsNbwX.js  __vite-browser-external-CDiN85UA.js  __vite-browser-external-CHutcxuM.js  __vite-browser-external-CIK6YeCj.js  __vite-browser-external-CQ-pCGVU.js  __vite-browser-external-CT0hLWL3.js  __vite-browser-external-CUM7ov-_.js  __vite-browser-external-CaFizHA9.js  __vite-browser-external-CbeHXHEr.js  __vite-browser-external-CctK44Pf.js  __vite-browser-external-Cj4rt04-.js  __vite-browser-external-CphYiyFe.js  __vite-browser-external-CrR1deAt.js  __vite-browser-external-CvAJkZvW.js  __vite-browser-external-DCacSJ3F.js  __vite-browser-external-DCqt0mWS.js  __vite-browser-external-DD1SsTNW.js  __vite-browser-external-DMRtYXSB.js  __vite-browser-external-DPMqhAek.js  __vite-browser-external-DS9zDU4V.js  __vite-browser-external-DSazUnuX.js  __vite-browser-external-DTxbUQMa.js  __vite-browser-external-DdSZO5A6.js  __vite-browser-external-Dh_tCHyT.js  __vite-browser-external-DrEQunyV.js  __vite-browser-external-DvoXN52U.js  (+1535 more)
benchmarks/: gate.ts  run.ts  types.ts
crates/fork-instrument/: Cargo.toml  README.md
crates/fork-instrument/fuzz/: Cargo.toml  seed_corpus.sh
crates/fork-instrument/fuzz/fuzz_targets/: fuzz_try_table.rs  generator.rs  oracle.rs
crates/fork-instrument/src/: call_graph.rs  instrument.rs  lib.rs  linked_frames.rs  main.rs  runtime.rs
crates/fork-instrument/tests/: call_graph.rs  cli_permissions.rs  coverage_wat.rs  determinism.rs  dispatch_tree.rs  instrument.rs  large_dispatcher.rs  roundtrip.rs  runtime.rs  switch_dispatch.rs  trampoline.rs
crates/fork-instrument/tests/fixtures/: spike_switch_dispatch.wat
crates/fork-instrument/tests/fixtures/determinism/: multiple_nested_regions.wat
crates/fork-instrument/tests/fixtures/switch_dispatch/: carryover_at_subregion.wat  direct_call_carryover_in_block.wat  guard_dispatch_non_fork_call.wat  nested_fork_call.wat  posix_spawn_class.wat  top_level_carryover.wat  waitpid_class.wat
crates/fork-instrument/tests/fixtures/trampoline/: legacy_try_fork.wat  nested_call_indirect.wat  nested_carryover_in_loop.wat  nested_multivalue_params.wat  top_level_carryover.wat
crates/kernel/: Cargo.toml
crates/kernel/src/: access.rs  audio.rs  descriptor_backing.rs  devfs.rs  fd.rs  fifo.rs  fork.rs  ipc.rs  lib.rs  lock.rs  memory.rs  mouse.rs  mqueue.rs  ofd.rs  openssl.cnf  path.rs  pipe.rs  process.rs  process_table.rs  procfs.rs  pshared.rs  pty.rs  signal.rs  socket.rs  spawn.rs  syscalls.rs  terminal.rs  unix_socket.rs  wakeup.rs  wasm_api.rs
crates/kernel/src/audio/: ctl_ioctl.rs  mmap.rs  mod.rs  pcm_ioctl.rs  sab.rs  tick.rs  wait.rs
crates/kernel/src/dri/: bo.rs  master.rs  mod.rs
crates/kernel/src/input/: dispatch.rs  mod.rs  wait.rs
crates/wasm-local-root-spill/: Cargo.toml  README.md
crates/wasm-local-root-spill/src/: lib.rs  main.rs
crates/wasm-local-root-spill/tests/: root_spill.rs
docs/: abi-versioning.md  architecture.md  binary-releases.md  browser-support.md  compromising-xfails.md  dependency-management-future-work.md  dependency-management.md  fork-instrumentation.md  future-improvements.md  homebrew-publishing.md  homebrew-registry-ownership.json  integration-batches.md  jsc-terminate-atomics-wait-workaround.md  kandelo-desktop-demo.md  mariadb-project-tests.md  node-core-official-tests.md  package-management-future-work.md  package-management.md  package-sources.md  porting-guide.md  posix-status.md  posix-test-report.md  profiling.md  repository-organization.md  sdk-guide.md  software-unit-tests.md  spidermonkey-official-test-report.md  udp-posix-remaining-plan.md  wasm-limitations.md
docs-site/: index.md
examples/: README.md  chown_sentinel_test.c  clock_getcpuclockid_test.c  divzero_trap_test.c  dsp_signal_test.c  environment_lifecycle_test.c  fifo_lifecycle_test.c  fstatat_empty_path_test.c  getdents_boundary_test.c  getpwent_smoke.c  getpwent_test.c  kernel_allocator_churn_test.c  locale_info_test.c  lseek_invalid_test.c  mmap_shared_anonymous_fork.c  mmap_shared_anonymous_fork.wasm  oob_trap_test.c  procfs_accounting_test.c  pthread-varargs-stack.c  pthread_channel_reuse_test.c  run-example-output.ts  run-example.ts  signal-wait.c  (+14 more)
xtask/: Cargo.toml
xtask/src/: archive_stage.rs  archive_stage_cli.rs  build_deps.rs  build_index.rs  build_manifest.rs  bundle_program.rs  cache_key_diff.rs  deps_manifest.rs  dump_abi.rs  host_tool_probe.rs  index_toml.rs  index_update.rs  install_release.rs  main.rs  pkg_manifest.rs  program_metadata.rs  remote_fetch.rs  source_extract.rs  stage_pr_overlay.rs  stage_release.rs  update_pkg_manifest.rs  verify_release.rs
(+2650 files in other folders)
