[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false
# xtask is a host-only build tool. The workspace `.cargo/config.toml`
# defaults `target` to `wasm64-unknown-unknown`, but xtask MUST be
# built and tested for the host: `ureq`'s `tls` feature transitively
# depends on `ring`, whose C build does not support wasm targets.
#
# Always pass an explicit host target when working with this crate:
#
#     cargo test -p xtask --target aarch64-apple-darwin
#     cargo build -p xtask --target aarch64-apple-darwin
#
# (See `xtask/README.md`.) `forced-target` would resolve this in
# theory but is gated on nightly-only `per-package-target`, which is
# unstable and currently panics in the resolver on our toolchain.

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
wasm-posix-shared = { path = "../crates/shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to a single minor. wasmparser has churned across minors
# (CompositeType vs CompositeInnerType, SubType shape, etc). A passive
# `cargo update` should not silently break the snapshot generator.
wasmparser = "0.247"
sha2 = "0.10"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Remote-fetch path (Task A.9). `ureq` is used because the resolver only
# needs sync, blocking HTTP and ureq pulls a much smaller transitive
# tree than reqwest. `zstd` + `tar` decode the binary-cache archive.
ureq = { version = "2", default-features = false, features = ["tls"] }
zstd = "0.13"
tar = "0.4"
