[package]
name = "fork-instrument"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Instruments wasm binaries with save/restore machinery for POSIX fork()"
publish = false

[[bin]]
name = "wasm-fork-instrument"
path = "src/main.rs"

[lib]
name = "fork_instrument"
path = "src/lib.rs"

[dependencies]
# walrus — typed wasm IR with validator. The primary workhorse for
# parsing, manipulating, and emitting instrumented modules.
walrus = "0.26"

# anyhow — ergonomic error chaining for a CLI / build tool.
anyhow = "1"

# clap — argument parsing. `derive` feature for #[derive(Parser)].
clap = { version = "4", features = ["derive"] }

# wasmparser — independent validator used in tests to confirm walrus
# output round-trips cleanly through a separate implementation. The
# instrumenter also uses its section ranges to keep a leading dylink.0 section
# first when Walrus re-emits a shared module.
wasmparser = "0.247"

[dev-dependencies]
# wasmprinter — byte-level wasm-to-WAT for assertions that walrus's IR
# can't see (notably post-Br "unreachable" code that walrus's parser
# strips on round-trip but is preserved in the actual wasm bytes).
wasmprinter = "0.247"

# wat — compiles WAT source into wasm bytes in-test. Keeps fixture
# sources readable as text alongside the assertions that consume them.
wat = "1"
