[package]
name = "kandelo"
version.workspace = true
edition.workspace = true

[lib]
name = "kandelo_kernel"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-posix-shared = { path = "../shared" }

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
dlmalloc = { version = "0.2.14", default-features = false }
